src/styles/index.css
html {
  scroll-behavior: smooth;
}

:root {
  font-family: var(--brand-font-family, "Helvetica Neue", Arial, sans-serif);
  line-height: 1.5;
  font-weight: 400;
}

/* Custom Bootstrap Overrides */
.btn-primary,
.text-primary,
.bg-primary,
.btn-outline-primary:hover {
  background-color: var(--brand-primary-color, #0644a7) !important;
  color: #fff !important;
  /* Ensure text is visible on a black background */
  border-width: 2px !important;
  border-color: #000 !important;
}

.btn-outline-primary {
  background-color: #fff !important;
  color: #000 !important;
  /* Ensure text is visible on a black background */
  border-color: #000 !important;
  border-width: 2px !important;
}

.btn-light {
  background-color: #fff !important;
}

a.text-primary {
  color: var(--brand-primary-color, #0644a7) !important;
}

a.text-primary:hover,
a.text-primary:focus {
  color: #555 !important;
  /* Slightly lighter shade for hover/focus state */
}

input[type="checkbox"] {
  border: 2px solid #000 !important;
  border-radius: 0px !important;
}

.custom-link-btn {
  background: none;
  border: none;
  padding: 0;
  display: inline-flex;
  align-items: center;
  text-decoration: none;
  font-size: 16px;
  font-weight: 400;
  border: none !important;
}

.custom-link-btn:hover {
  text-decoration: underline;
  color: var(--brand-primary-color, #0644a7) !important;
  border: none !important;
  text-decoration-line: none;
}

.custom-link-btn svg {
  margin-left: 8px;
  transition: transform 0.2s ease;
}

.custom-link-btn:hover svg {
  transform: translateX(4px);
}

.custom-h1 {
  color: var(--brand-primary-color, #0644a7);
}

section {
  padding: 20px 0;
}

.nav-item.active > a {
  color: var(--brand-primary-color, #0644a7);
}

.chatbot-parent-div {
  position: fixed;
  bottom: var(--chatbot-bottom-space, 30px);
  right: var(--chatbot-right-space, 30px);
}

.chatbot-button {
  background-color: var(--brand-primary-color, #0644a7);
  color: #fff;
  width: 50px;
  height: 50px;
  cursor: pointer;
  z-index: 999;
  border: none;
  border-radius: 50%;
}

.chatbot-div {
  position: fixed;
  bottom: var(--chatbot-iframe-bottom-space, 100px);
  right: var(--chatbot-iframe-right-space, 30px);
  width: 375px;
  height: 531px;
  z-index: 999;
  border-radius: var(--chatbot-iframe-border-radius, 7px);
}

/* Media query for screen widths below 408px */
@media screen and (max-width: 408px) {
  .chatbot-div {
    right: 5px;
  }
}

/* Media query for screen widths below 380px */
@media screen and (max-width: 380px) {
  .chatbot-div {
    right: 0px;
  }
}

.chatbot-frame {
  width: 100%;
  height: 100%;
  border: "none";
  border-radius: var(--chatbot-iframe-border-radius, 7px);
}

